abstracted scroll methods to allow for movement on mobiles, chrome and firefox, fixed minor bugs, removed legacy file

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -53,6 +53,7 @@ body {
         position : fixed;
         top      : 0;
         bottom   : 0;
+        height   : auto !important;
     }
     background-color  : @cMatteBlue;
     background-image  : url("../assets/graphics/scene/world/matte/patterns/blue.jpg");
@@ -293,9 +294,9 @@ body {
                     background       : url("../assets/graphics/hud/timeline/timeline-avatar-01.gif") no-repeat 0 0;
 
                     h3 {
-                        margin  : 0 0 0 50px;
-                        padding : 0;
-                        font-weight: normal;
+                        margin      : 0 0 0 50px;
+                        padding     : 0;
+                        font-weight : normal;
                         .name { font-weight : bold; color : #00a2ff }
                     }
                     p.timestamp {
